# agent-tui

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
agent_tui/: __main__.py  _debug.py  _version.py  app.py  clipboard.py  command_registry.py  config.py  file_ops.py  hooks.py  main.py  model_config.py  project_utils.py  sessions.py  theme.py  tool_display.py  tools.py  ui.py  update_check.py
agent_tui/widgets/: __init__.py  ask_user.py  chat_input.py  loading.py  messages.py  model_selector.py  notification_settings.py  status.py  thread_selector.py  welcome.py
docs/: agent-tui-course.html
docs/substack/: part-10-production.md  part-2-first-agent.md  part-3-custom-tools.md  part-4-backends.md  part-5-memory.md  part-6-skills.md  part-7-hitl.md  part-8-cli.md  part-9-testing.md
docs/superpowers/plans/: 2026-04-14-deepagents-integration.md  2026-04-14-layered-architecture.md  (+2 more)
src/agent_tui/: __init__.py  __main__.py  _ask_user_types.py  _debug.py  adapter.py  app.py  clipboard.py  command_registry.py  config.py  file_ops.py  hooks.py  input.py  main.py  mcp_tools.py  media_utils.py  model_config.py  project_utils.py  protocol.py  sessions.py  stub_agent.py  tool_display.py  tools.py  ui.py  update_check.py
tests/: conftest.py  test_app_commands.py  test_deep_agents_adapter.py  test_deep_agents_backend.py  test_deep_agents_memory.py  test_deep_agents_skills.py  test_event_translator.py  test_mcp.py  test_mcp_panel.py  test_protocol.py  test_sandbox.py  test_stub_agent.py
tests/e2e/: conftest.py  run_e2e.py
tests/web/: test_api.py
(+69 files in other folders)
