[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tui"
version = "0.1.0"
description = "Standalone TUI scaffold for AI coding agent CLIs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "textual>=8.0.0,<9.0.0",
    "textual-autocomplete>=3.0.0,<5.0.0",
    "textual-speedups>=0.2.1,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "prompt-toolkit>=3.0.52,<4.0.0",
    "httpx>=0.28.1,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tomli-w>=1.0.0,<2.0.0",
    "pyperclip>=1.11.0,<2.0.0",
    "pillow>=10.0.0,<13.0.0",
    "markdownify>=0.13.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "packaging>=24.0",
    "uuid-utils>=0.9.0,<1.0.0",

]

[project.scripts]
agent-tui = "agent_tui:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tui"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
